--- a/frontend/src/components/card/card.scss
+++ b/frontend/src/components/card/card.scss
@@ -1,8 +1,9 @@
 .card {
+  width: 100%;
   display: flex;
   flex-direction: row;
   border-bottom: 2px solid #EEEEEE;
-  color:#333333;
+  color: #333333;
 
   .card-info {
     width: 65%;
@@ -14,11 +15,12 @@
       height: 180px;
       margin: 16px;
       cursor: pointer;
-      
-      img{
-        width:100%;
+
+      img {
+        width: 100%;
         height: 100%;
         border-radius: 4px;
+        object-fit: contain;
       }
     }
 
@@ -27,26 +29,43 @@
       flex-direction: column;
       margin-top: 30px;
 
-      .card-price{
+      .card-price {
         display: flex;
 
-        .card-img{
+        .card-img {
           object-fit: contain;
           margin-left: 10px;
         }
 
         h2 {
           font-size: 24px;
-          font-weight:500;
+          font-weight: 500;
+        }
+
+        @media (max-width: 1080px) {
+          h2 {
+            font-size: 22px;
+          }
+        }
+
+        @media (max-width: 767px) {
+          h2 {
+            font-size: 20px;
+          }
         }
       }
+
     }
 
     h3 {
       font-size: 18px;
-      font-weight:500;
-      margin-top:32px;
+      font-weight: 500;
+      margin-top: 32px;
       cursor: pointer;
+
+      @media (max-width: 767px) {
+        font-size: 16px;
+      }
     }
   }
 
@@ -55,10 +74,9 @@
     display: flex;
     justify-content: center;
     margin-top: 50px;
-    
-    p{
+
+    p {
       font-size: 12px;
     }
   }
-
 }
