--- a/frontend/src/components/searchInfo/searchInfo.scss
+++ b/frontend/src/components/searchInfo/searchInfo.scss
@@ -1,9 +1,24 @@
-.text {
-  color: #999999;
-  margin: 16px 0;
-  font-size: 14;
+.search-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 
-  span {
-    font-weight: 600;
+  .text {
+    width: 1015px;
+    color: #999999;
+    margin: 16px 0;
+    font-size: 14;
+
+    span {
+      font-weight: 600;
+    }
+
+    @media (max-width: 1080px) {
+      width: 715px;
+    }
+
+    @media (max-width: 767px) {
+      width: 515px;
+    }
   }
 }
