--- a/frontend/src/pages/detailProduct/detailProduct.scss
+++ b/frontend/src/pages/detailProduct/detailProduct.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 425px;
+  align-items: center;
   background-color: #EEEEEE;
 
   .box {
@@ -12,17 +12,26 @@
     margin: 32px;
 
     .box-img {
-      width:680px;
-      // background-color: yellow;
+      width: 680px;
 
-      img{
+      img {
         width: 100%;
         height: auto;
+      }
+
+      @media (max-width: 1080px) {
+        width: 420px;
+        height: auto;
+      }
+
+      @media (max-width: 767px) {
+        width: 240px;
+        height: 240px;
       }
     }
 
     .box-price {
-      width:30%;
+      width: 30%;
       color: #333333;
 
       p {
@@ -49,7 +58,7 @@
 
       .btn-meli {
         padding: 10px 100px;
-        color:#FFFFFF;
+        color: #FFFFFF;
         background: #3487FA;
         font-size: 16px;
         font-weight: 500;
@@ -57,6 +66,42 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
+      }
+
+      @media (max-width: 1080px) {
+        width: 40%;
+
+        h1 {
+          font-size: 36px;
+          margin: 22px 0;
+        }
+
+        h2 {
+          font-size: 22px;
+        }
+      }
+
+      @media (max-width: 767px) {
+        width: 42%;
+
+        p {
+          font-size: 12px;
+        }
+
+        h1 {
+          font-size: 32px;
+          margin: 18px 0;
+        }
+
+        h2 {
+          font-size: 20px;
+          margin-top: 16px;
+        }
+
+        .btn-meli {
+          padding: 8px 70px;
+          font-size: 14px;
+        }
       }
     }
   }
@@ -74,6 +119,22 @@
     p {
       color: #999999;
       font-size: 16px;
+    }
+
+    @media (max-width: 1080px) {
+      h2 {
+        font-size: 24px;
+      }
+    }
+
+    @media (max-width: 767px) {
+      h2 {
+        font-size: 20px;
+      }
+
+      p {
+        font-size: 14px;
+      }
     }
   }
 }
