--- a/frontend/src/pages/searchProduct/searchProduct.scss
+++ b/frontend/src/pages/searchProduct/searchProduct.scss
@@ -2,16 +2,26 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 425px;
+  align-items: center;
   background-color: #EEEEEE;
+  padding-bottom: 30px;
 }
 
 .card-container {
   margin: 16px 0;
-  width: 100%;
   border-radius: 4px;
   background-color: #FFFFFF;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
+  width: 1020px;
+
+  @media (max-width: 1080px) {
+    width: 715px;
+  }
+
+  @media (max-width: 767px) {
+    width: 515px;
+  }
 }
